--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-do-List</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
     <script type="text/javascript" src="./index.js" defer=""></script>
     <link rel="stylesheet" href="./index.css">
   </head>
@@ -12,10 +13,13 @@
   <body>
     <div class="container">
       <h1>To-Do-List</h1>
-      <input type="text" id="new-task" placeholder="Add a new task">
+      <input type="text" id="new-task" placeholder="Add a new task...">
       <button id="add-task-btn">Add Task</button>
       <ul id="task-list"></ul>
+
     </div>
+
+
 
   </body>
 
